[package]
name = "BinderClip"
version = "1.0.0"
edition = "2021"
description = "An example application"

[dependencies]
winit = "0.27.5"
imgui = "0.10.0"
imgui-winit-support = "0.10.0"
imgui-glium-renderer = "0.10.0"
glium = "0.32.1"
clipboard = "0.5.0"
textwrap = "0.16"
image = "0.24.5"

[package.metadata.bundle]
name="Binder Clip"
icon=["resources/images/clip.icns"]
short_description = "An cheatsheet application, that allows you to pin your text over presentation."
version = "1.0.0"
copyright = "Copyright (c) Yehor Iliushchenko 2023. All rights reserved."
identifier="dev.iliushchenko.binderclip"

